--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
-  "name": "template-diw-20251-semana-11",
+  "name": "guia-viagens",
   "version": "1.0.0",
-  "description": "Back end com JSONServer. Projeto da disciplina de Desenvolvimento de Interfaces Web de vários cursos da PUC Minas",
-  "main": "",
+  "description": "Guia de Viagens com JSON Server",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx json-server ./db/db.json"
+    "start": "json-server --watch db/db.json --port 3000 --static ./public",
+    "dev": "start http://localhost:3000 && json-server --watch db/db.json --port 3000"
+  },
+  "dependencies": {
+    "json-server": "^0.17.4"
+  },
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ICEI-DIW/trabalho-pratico-semana-11-Avendanho.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "json-server": "^1.0.0-beta.3"
-  }
+  "bugs": {
+    "url": "https://github.com/ICEI-DIW/trabalho-pratico-semana-11-Avendanho/issues"
+  },
+  "homepage": "https://github.com/ICEI-DIW/trabalho-pratico-semana-11-Avendanho#readme",
+  "devDependencies": {}
 }
