--- a/package.json
+++ b/package.json
@@ -3,11 +3,8 @@
   "version": "1.0.0",
   "description": "Guia de Viagens com JSON Server",
   "scripts": {
-    "start": "json-server --watch db/db.json --port 3000 --static ./public",
+    "start": "json-server --watch db/db.json --static ./public",
     "dev": "start http://localhost:3000 && json-server --watch db/db.json --port 3000"
-  },
-  "dependencies": {
-    "json-server": "^0.17.4"
   },
   "main": "index.js",
   "repository": {
@@ -21,5 +18,7 @@
     "url": "https://github.com/ICEI-DIW/trabalho-pratico-semana-11-Avendanho/issues"
   },
   "homepage": "https://github.com/ICEI-DIW/trabalho-pratico-semana-11-Avendanho#readme",
-  "devDependencies": {}
+  "devDependencies": {
+    "json-server": "^1.0.0-beta.3"
+  }
 }
